<resources>
    <string name="app_name">My Application</string>
    <string name="get_started">Get Started!</string>
    <string name="onboarding_description">Welcome to our cozy coffee corner, where every cup is a delightful for you.</string>
    <string name="onboarding_title">Fall in Love with Coffee in Blissful Delight!</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_to_access_your_account">sign in to access your account</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="next"><![CDATA[Next >]]></string>
    <string name="new_member">New member?</string>
    <string name="register_now">Register Now</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="brand_logo">Brand Logo</string>
    <string name="by_creating_a_free_account">by creating a free account.</string>
    <string name="by_checking_the_box_you_agree_to_our_terms_and_conditions">By checking the box you agree to our Terms and Conditions.</string>
    <string name="already_a_member">Already a member?</string>
    <string name="log_in">Log in</string>
    <string name="full_name">Full name</string>
    <string name="valid_email">Valid email</string>
    <string name="phone_number">Phone number</string>
    <string name="strong_password">Strong password</string>
    <string name="fragment_b" translatable="false">FragmentB</string>
    <string name="fragment_a" translatable="false">FragmentA</string>
    <string name="toggle_fragment">Toggle Fragment</string>
    <string name="navigate_to_fragment_b">Navigate to Fragment B</string>
    <string name="navigate_to_fragment_a">Navigate to Fragment A</string>
    <string name="menu_settings">Menu settings</string>
</resources>