<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    >

    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/coffee"
        android:scaleType="centerCrop"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/getStartedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#C67C4E"
        android:layout_marginBottom="54dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/headerDescription"
        app:layout_constraintBottom_toTopOf="@+id/getStartedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="@+id/getStartedButton"
        app:layout_constraintEnd_toEndOf="@id/getStartedButton"
        android:text="@string/onboarding_description"
        android:textSize="14sp"
        android:textColor="#A2A2A2"
        android:gravity="center"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/headerDescription"
        android:textSize="32dp"
        app:layout_constraintStart_toStartOf="@+id/headerDescription"
        app:layout_constraintEnd_toEndOf="@id/headerDescription"
        android:layout_marginBottom="8dp"
        android:text="@string/onboarding_title"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        />



</androidx.constraintlayout.widget.ConstraintLayout>